--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | QR code component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <title>QR Code Practice | QR code component</title>
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -16,13 +14,24 @@
 </head>
 <body>
 
-  Improve your front-end skills by building projects
+  Elevate your Business by implementing Modern solutions.
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+  Scan the QR code to visit Your Website and improve your Store!
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Mehrad Ghadrdan</a>.
   </div>
+  <!-- 
+  - Mobile: 375px
+  - Desktop: 1440px
+  - White: hsl(0, 0%, 100%)
+  - Slate 300: hsl(212, 45%, 89%)
+  - Slate 500: hsl(216, 15%, 48%)
+  - Slate 900: hsl(218, 44%, 22%)
+  - Font size (paragraph): 15px
+  - Family: [Outfit](https://fonts.google.com/specimen/Outfit)
+  - Weights: 400, 700
+  -->
 </body>
 </html>
